1.提交最新蓝图

--- a/MotionSymphonyTest.uproject
+++ b/MotionSymphonyTest.uproject
@@ -17,6 +17,11 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "MotionSymphony",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/0c2538101593418b8818585d2a97aacb"
 		}
 	]
 }
