--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/TourorialMap.TourorialMap
 EditorStartupMap=/Game/Maps/TourorialMap.TourorialMap
-GlobalDefaultGameMode=/Game/Turorial/BP_TurorialGameMode.BP_TurorialGameMode_C
+GlobalDefaultGameMode=/Game/BP_MSGameMode.BP_MSGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -61,6 +61,8 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/MotionSymphonyTest")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/MotionSymphonyTest")
+AssetManagerClassName=/Script/MotionSymphonyTest.MSAssetManager
+WorldSettingsClassName=/Script/MotionSymphonyTest.MSWorldSettings
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
